WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97893
REGRESSION(
r127727
): Calendar picker is ignoring step
https://bugs.webkit.org/show_bug.cgi?id=97893
Summary
REGRESSION(r127727): Calendar picker is ignoring step
Keishi Hattori
Reported
2012-09-28 04:42:25 PDT
Calendar picker is ignoring step and showing all dates as available
Attachments
Patch
(6.93 KB, patch)
2012-09-30 21:57 PDT
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
Patch
(3.95 KB, patch)
2012-09-30 23:03 PDT
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
Patch
(6.98 KB, patch)
2012-09-30 23:17 PDT
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
Patch
(6.97 KB, patch)
2012-09-30 23:22 PDT
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Keishi Hattori
Comment 1
2012-09-30 21:57:20 PDT
Created
attachment 166406
[details]
Patch
Kent Tamura
Comment 2
2012-09-30 22:06:13 PDT
Comment on
attachment 166406
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=166406&action=review
> Source/WebCore/ChangeLog:8 > + There were two mistakes. If statement was wrong and DateTimeChooserParameters.step was number of milliseconds when it should be number of days.
"If statement was ..." is a very confusing sentence. should be "An if-statement was ..." Also, bulletizing improves readability. e.g. There were two mistakes: - An if-statement to check step attribute validity was wrong, and - DateTiemChooserParameters.step was milleseconds when it should be number of days.
Keishi Hattori
Comment 3
2012-09-30 23:03:57 PDT
Created
attachment 166407
[details]
Patch
Keishi Hattori
Comment 4
2012-09-30 23:17:39 PDT
Created
attachment 166409
[details]
Patch
WebKit Review Bot
Comment 5
2012-09-30 23:21:11 PDT
Comment on
attachment 166409
[details]
Patch Rejecting
attachment 166409
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/14075812
Keishi Hattori
Comment 6
2012-09-30 23:22:58 PDT
Created
attachment 166410
[details]
Patch
WebKit Review Bot
Comment 7
2012-10-01 00:14:56 PDT
Comment on
attachment 166410
[details]
Patch Clearing flags on attachment: 166410 Committed
r130008
: <
http://trac.webkit.org/changeset/130008
>
WebKit Review Bot
Comment 8
2012-10-01 00:14:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug