REGRESSION(r127727): Calendar picker is ignoring step https://bugs.webkit.org/show_bug.cgi?id=97893

Reviewed by Kent Tamura.

Source/WebCore:

There were two mistakes:
- An if-statement to check step attribute validity was wrong, and
- DateTiemChooserParameters.step was milleseconds when it should be number of days.
This will be changing the DateTimeChooserParameters.step to milliseconds so we can handle steps for other input types in the future.

Test: fast/forms/date/calendar-picker-appearance-with-step.html

* Resources/pagepopups/calendarPicker.js:
(CalendarPicker):
* html/shadow/CalendarPickerElement.cpp:
(WebCore::CalendarPickerElement::openPopup): If statement was wrong.

LayoutTests:

* fast/forms/date/calendar-picker-appearance-with-step-expected.txt: Added.
* fast/forms/date/calendar-picker-appearance-with-step.html: Added.


Canonical link: https://commits.webkit.org/116010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130008 268f45cc-cd09-0410-ab3c-d52691b4dbfc